crates/xlsx/tests/snapshots/snapshots__display_list_snapshots@cf-cell-is.snap
---
source: crates/xlsx/tests/snapshots.rs
expression: dump
---
Clear
Rect x=0 y=0 w=800 h=600 fill=Color(4294967295) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
PushClip x=44 y=20 w=756 h=580
Rect x=44 y=20 w=64 h=20 fill=Color(3337604863) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=172 y=20 w=64 h=20 fill=Color(3722305023) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=44 y=40 w=64 h=20 fill=Color(3337604863) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=172 y=40 w=64 h=20 fill=Color(3722305023) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=44 y=60 w=64 h=20 fill=Color(3337604863) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=172 y=60 w=64 h=20 fill=Color(3722305023) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=44 y=80 w=64 h=20 fill=Color(4293631231) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=44 y=100 w=64 h=20 fill=Color(4293631231) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=44 y=120 w=64 h=20 fill=Color(4293631231) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=44 y=140 w=64 h=20 fill=Color(4293631231) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=44 y=160 w=64 h=20 fill=Color(4293631231) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=44 y=180 w=64 h=20 fill=Color(4291284735) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=172 y=180 w=64 h=20 fill=Color(3722305023) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=44 y=200 w=64 h=20 fill=Color(4291284735) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=172 y=200 w=64 h=20 fill=Color(3722305023) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=44 y=220 w=64 h=20 fill=Color(4291284735) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=172 y=220 w=64 h=20 fill=Color(3722305023) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=44 y=240 w=64 h=20 fill=Color(4291284735) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=172 y=240 w=64 h=20 fill=Color(3722305023) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Line x1=44 y1=20 x2=300 y2=20 stroke=Color(3654932991) sw=1 style=Solid
Line x1=44 y1=40 x2=300 y2=40 stroke=Color(3654932991) sw=1 style=Solid
Line x1=44 y1=60 x2=300 y2=60 stroke=Color(3654932991) sw=1 style=Solid
Line x1=44 y1=80 x2=300 y2=80 stroke=Color(3654932991) sw=1 style=Solid
Line x1=44 y1=100 x2=300 y2=100 stroke=Color(3654932991) sw=1 style=Solid
Line x1=44 y1=120 x2=300 y2=120 stroke=Color(3654932991) sw=1 style=Solid
Line x1=44 y1=140 x2=300 y2=140 stroke=Color(3654932991) sw=1 style=Solid
Line x1=44 y1=160 x2=300 y2=160 stroke=Color(3654932991) sw=1 style=Solid
Line x1=44 y1=180 x2=300 y2=180 stroke=Color(3654932991) sw=1 style=Solid
Line x1=44 y1=200 x2=300 y2=200 stroke=Color(3654932991) sw=1 style=Solid
Line x1=44 y1=220 x2=300 y2=220 stroke=Color(3654932991) sw=1 style=Solid
Line x1=44 y1=240 x2=300 y2=240 stroke=Color(3654932991) sw=1 style=Solid
Line x1=44 y1=260 x2=300 y2=260 stroke=Color(3654932991) sw=1 style=Solid
Line x1=44 y1=280 x2=300 y2=280 stroke=Color(3654932991) sw=1 style=Solid
Line x1=44 y1=20 x2=44 y2=280 stroke=Color(3654932991) sw=1 style=Solid
Line x1=108 y1=20 x2=108 y2=280 stroke=Color(3654932991) sw=1 style=Solid
Line x1=172 y1=20 x2=172 y2=280 stroke=Color(3654932991) sw=1 style=Solid
Line x1=236 y1=20 x2=236 y2=280 stroke=Color(3654932991) sw=1 style=Solid
Line x1=300 y1=20 x2=300 y2=280 stroke=Color(3654932991) sw=1 style=Solid
Line x1=172 y1=180 x2=236 y2=180 stroke=Color(255) sw=1 style=Solid
Line x1=172 y1=180 x2=236 y2=180 stroke=Color(255) sw=1 style=Solid
Line x1=172 y1=200 x2=236 y2=200 stroke=Color(255) sw=1 style=Solid
Line x1=172 y1=200 x2=236 y2=200 stroke=Color(255) sw=1 style=Solid
Line x1=172 y1=220 x2=236 y2=220 stroke=Color(255) sw=1 style=Solid
Line x1=172 y1=220 x2=236 y2=220 stroke=Color(255) sw=1 style=Solid
Line x1=172 y1=240 x2=236 y2=240 stroke=Color(255) sw=1 style=Solid
Line x1=172 y1=240 x2=236 y2=240 stroke=Color(255) sw=1 style=Solid
PushClip x=44 y=20 w=64 h=20
Text x=105 y=37 text="10" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=108 y=20 w=64 h=20
Text x=169 y=37 text="95" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=172 y=20 w=64 h=20
Text x=233 y=37 text="8%" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=true underline=false
PopClip
PushClip x=44 y=40 w=64 h=20
Text x=105 y=57 text="15" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=108 y=40 w=64 h=20
Text x=169 y=57 text="90" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=172 y=40 w=64 h=20
Text x=233 y=57 text="17%" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=true underline=false
PopClip
PushClip x=44 y=60 w=64 h=20
Text x=105 y=77 text="20" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=108 y=60 w=64 h=20
Text x=169 y=77 text="85" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=172 y=60 w=64 h=20
Text x=233 y=77 text="25%" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=44 y=80 w=64 h=20
Text x=105 y=97 text="25" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=108 y=80 w=64 h=20
Text x=169 y=97 text="80" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=172 y=80 w=64 h=20
Text x=233 y=97 text="33%" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=true underline=false
PopClip
PushClip x=44 y=100 w=64 h=20
Text x=105 y=117 text="30" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=108 y=100 w=64 h=20
Text x=169 y=117 text="75" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=172 y=100 w=64 h=20
Text x=233 y=117 text="42%" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=true underline=false
PopClip
PushClip x=44 y=120 w=64 h=20
Text x=105 y=137 text="35" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=108 y=120 w=64 h=20
Text x=169 y=137 text="70" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=172 y=120 w=64 h=20
Text x=233 y=137 text="50%" font="Calibri" size=14.666667 color=Color(2617247487) align=Right baseline=Bottom bold=true italic=true underline=false
PopClip
PushClip x=44 y=140 w=64 h=20
Text x=105 y=157 text="40" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=108 y=140 w=64 h=20
Text x=169 y=157 text="65" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=172 y=140 w=64 h=20
Text x=233 y=157 text="58%" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=true underline=false
PopClip
PushClip x=44 y=160 w=64 h=20
Text x=105 y=177 text="45" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=108 y=160 w=64 h=20
Text x=169 y=177 text="60" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=172 y=160 w=64 h=20
Text x=233 y=177 text="67%" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=true underline=false
PopClip
PushClip x=44 y=180 w=64 h=20
Text x=105 y=197 text="50" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=108 y=180 w=64 h=20
Text x=169 y=197 text="55" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=172 y=180 w=64 h=20
Text x=233 y=197 text="75%" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=true underline=false
PopClip
PushClip x=44 y=200 w=64 h=20
Text x=105 y=217 text="55" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=108 y=200 w=64 h=20
Text x=169 y=217 text="50" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=172 y=200 w=64 h=20
Text x=233 y=217 text="83%" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=true underline=false
PopClip
PushClip x=44 y=220 w=64 h=20
Text x=105 y=237 text="60" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=108 y=220 w=64 h=20
Text x=169 y=237 text="45" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=172 y=220 w=64 h=20
Text x=233 y=237 text="92%" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=true underline=false
PopClip
PushClip x=44 y=240 w=64 h=20
Text x=105 y=257 text="65" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=108 y=240 w=64 h=20
Text x=169 y=257 text="40" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=false underline=false
PopClip
PushClip x=172 y=240 w=64 h=20
Text x=233 y=257 text="100%" font="Calibri" size=14.666667 color=Color(255) align=Right baseline=Bottom bold=false italic=true underline=false
PopClip
PopClip
Rect x=0 y=0 w=800 h=20 fill=Color(4126537215) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
Rect x=0 y=0 w=44 h=600 fill=Color(4126537215) stroke=Color(0) sw=0 r=[0.0, 0.0, 0.0, 0.0]
PushClip x=44 y=0 w=64 h=20
Text x=76 y=10 text="A" font="Calibri" size=14.666667 color=Color(1145324799) align=Center baseline=Middle bold=false italic=false underline=false
PopClip
PushClip x=108 y=0 w=64 h=20
Text x=140 y=10 text="B" font="Calibri" size=14.666667 color=Color(1145324799) align=Center baseline=Middle bold=false italic=false underline=false
PopClip
PushClip x=172 y=0 w=64 h=20
Text x=204 y=10 text="C" font="Calibri" size=14.666667 color=Color(1145324799) align=Center baseline=Middle bold=false italic=false underline=false
PopClip
PushClip x=236 y=0 w=64 h=20
Text x=268 y=10 text="D" font="Calibri" size=14.666667 color=Color(1145324799) align=Center baseline=Middle bold=false italic=false underline=false
PopClip
Text x=41 y=30 text="1" font="Calibri" size=14.666667 color=Color(1145324799) align=Right baseline=Middle bold=false italic=false underline=false
Text x=41 y=50 text="2" font="Calibri" size=14.666667 color=Color(1145324799) align=Right baseline=Middle bold=false italic=false underline=false
Text x=41 y=70 text="3" font="Calibri" size=14.666667 color=Color(1145324799) align=Right baseline=Middle bold=false italic=false underline=false
Text x=41 y=90 text="4" font="Calibri" size=14.666667 color=Color(1145324799) align=Right baseline=Middle bold=false italic=false underline=false
Text x=41 y=110 text="5" font="Calibri" size=14.666667 color=Color(1145324799) align=Right baseline=Middle bold=false italic=false underline=false
Text x=41 y=130 text="6" font="Calibri" size=14.666667 color=Color(1145324799) align=Right baseline=Middle bold=false italic=false underline=false
Text x=41 y=150 text="7" font="Calibri" size=14.666667 color=Color(1145324799) align=Right baseline=Middle bold=false italic=false underline=false
Text x=41 y=170 text="8" font="Calibri" size=14.666667 color=Color(1145324799) align=Right baseline=Middle bold=false italic=false underline=false
Text x=41 y=190 text="9" font="Calibri" size=14.666667 color=Color(1145324799) align=Right baseline=Middle bold=false italic=false underline=false
Text x=41 y=210 text="10" font="Calibri" size=14.666667 color=Color(1145324799) align=Right baseline=Middle bold=false italic=false underline=false
Text x=41 y=230 text="11" font="Calibri" size=14.666667 color=Color(1145324799) align=Right baseline=Middle bold=false italic=false underline=false
Text x=41 y=250 text="12" font="Calibri" size=14.666667 color=Color(1145324799) align=Right baseline=Middle bold=false italic=false underline=false
Text x=41 y=270 text="13" font="Calibri" size=14.666667 color=Color(1145324799) align=Right baseline=Middle bold=false italic=false underline=false
Line x1=0 y1=20 x2=800 y2=20 stroke=Color(3233857791) sw=1 style=Solid
Line x1=44 y1=0 x2=44 y2=600 stroke=Color(3233857791) sw=1 style=Solid
